Fix image sizing issue on mobile view on Palette pages

--- a/.devcontainer/CODE/index.css
+++ b/.devcontainer/CODE/index.css
@@ -14,6 +14,10 @@ p {
     font-size: large;
 }
 
+.nav-link:hover {
+    color: aquamarine;
+}
+
 .btn {
     background-color: #000;
 }
@@ -47,6 +51,11 @@ color: black;
 .palette-list {
     font-family: 'Grandiflora One', cursive;
     font-size: large;
+}
+
+.img-responsive {
+    max-width: 100%;
+    height: auto;
 }
 
 #contact-form {align-content: center;}
